--- a/.env.example
+++ b/.env.example
@@ -9,3 +9,7 @@ VITE_M3U8_PROXY_URL=<m3u8_proxy_server_name>/m3u8-proxy?url=
 
 #totaly optional / if you don't want to setup worker just change the code of getQtip.utils.js following the pattern of any other utils file
 VITE_WORKER_URL=https://worker1.workers.dev,https://worker2.workers.dev,https://worker3.workers.dev,...
+
+VITE_BASE_IFRAME_URL=https://megaplay.buzz/stream/s-2
+
+VITE_BASE_IFRAME_URL_2=https://vidwish.live/stream/s-2
